в гитигнор добавил скрипты решения

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@ Thumbs.db
 !/www/crazyfish.com.ua/bitrix/.default
 !/www/crazyfish.com.ua/bitrix/market2_ru_custom
 !/www/crazyfish.com.ua/bitrix/market2_v1_custom
+!/www/crazyfish.com.ua/bitrix/js
 
